--- a/src/constants/_variables.scss
+++ b/src/constants/_variables.scss
@@ -9,4 +9,4 @@ $fontBarlow: 'Barlow Condensed', sans-serif;
 
 $DarkBlue: rgb(11, 13, 23);
 $lightBlue: rgb(208, 214, 249);
-$withe: rgb(255, 255, 255);
+$white: rgb(255, 255, 255);
