--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -37,8 +37,8 @@
 
   &__right {
     display: flex;
-    gap: 50px;
-    padding: 40px 170px;
+    gap: 70px;
+    padding: 40px 160px;
     height: 100%;
 
     background: rgba(255, 255, 255, 0.04);
@@ -51,9 +51,36 @@
       font-family: variables.$fontBarlow;
       font-weight: 500;
       letter-spacing: 2.7px;
+      position: relative;
 
       display: flex;
       gap: 1rem;
+
+      &::after {
+        background-color: rgba(255, 255, 255, 0.5);
+        content: "";
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        top: calc(100% + 37px);
+        height: 3px;
+        width: 90%;
+        opacity: 0;
+        transition: 250ms ease;
+
+        transform: translateX(5px);
+      }
+
+      &:hover::after {
+        opacity: 1;
+      }
+
+      &.active {
+        &::after {
+            background-color: #fff;
+            opacity: 1;
+        }
+      }
     }
   }
 }
