--- a/src/components/DestinationNavbar/style.scss
+++ b/src/components/DestinationNavbar/style.scss
@@ -179,3 +179,14 @@
         }
     }
 }
+
+// @keyframes reveal {
+//     0% {
+//         transform: translateY(30px);
+//         opacity: 0;
+//     }
+//     100% {
+//         transform: translateY(0);
+//         opacity: 1;
+//     }
+// }
