--- a/src/sections/DestinationSection/style.scss
+++ b/src/sections/DestinationSection/style.scss
@@ -10,7 +10,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    .title {
+    .title__destinations {
         letter-spacing: 2px;
         text-transform: uppercase;
         top: 170px;
@@ -22,7 +22,7 @@
         gap: 20px;
         font-family: v.$fontBarlow;
         color: white;
-        .number {
+        .number__destitations {
             font-weight: 700;
             color: gray;
         }
@@ -41,7 +41,7 @@
     .destinatons {
         height: auto;
         background-image: url(../../assets/destination/background-destination-tablet.jpg);
-        .title {
+        .title__destinations {
             left: 38.5px;
         }
     }
