--- a/src/sections/HeroSection/style.scss
+++ b/src/sections/HeroSection/style.scss
@@ -1,10 +1,139 @@
-.hero {
-  overflow: hidden;
-  height: 100vh;
+@use 'src/constants/variables' as v;
 
-  &__bg {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
+.hero {
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-image: url('../../assets/home/background-home-desktop.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &__container {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 200px;
+        width: 90%;
+        padding: 10px;
+        &-description {
+            gap: 40px;
+            flex-direction: column;
+            width: 450px;
+            height: 450px;
+            display: flex;
+            &-travel {
+                font-family: v.$fontBarlow;
+                font-size: 28px;
+                color: v.$lightBlue;
+            }
+            &-title {
+                font-style: normal;
+                font-size: 150px;
+                color: #fff;
+                font-family: v.$fontBellefair;
+            }
+            &-paragraph {
+                width: 100%;
+                font-style: normal;
+                font-size: 22px;
+                color: v.$lightBlue;
+                font-family: v.$fontBarlow;
+            }
+        }
+        &-ball {
+            &-explore {
+                cursor: pointer;
+                position: relative;
+                font-family: v.$fontBellefair;
+                margin-top: 100px;
+                font-size: 32px;
+                color: v.$DarkBlue;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                top: 10px;
+                border-radius: 50%;
+                background-color: #fff;
+                width: 274px;
+                height: 274px;
+                z-index: 20;
+                &::after {
+                    transition: 250ms ease;
+                    z-index: 9;
+                    position: absolute;
+                    content: '';
+                    width: 100%;
+                    height: 100%;
+                    transform: scale(1.3);
+                    background-color: #fff;
+                    opacity: 0;
+                    border-radius: 50%;
+                }
+                &:hover::after {
+                    opacity: 0.2;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 950px) {
+    .hero {
+        height: 1120px;
+        background-image: url('../../assets/home/background-home-tablet.jpg');
+        &__container {
+            gap: 50px;
+            height: 1000px;
+            justify-content: center;
+            margin-top: 100px;
+            flex-direction: column;
+            &-description {
+                height: 50%;
+                text-align: center;
+            }
+            &-ball {
+                &-explore {
+                    width: 242px;
+                    height: 242px;
+                    margin-top: 20px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 475px) {
+    .hero {
+        height: 100%;
+        background-image: url('../../assets/home/background-home-mobile.jpg');
+        &__container {
+            height: 700px;
+            margin-top: 100px;
+            &-description {
+                width: 327px;
+                height: 320px;
+                &-travel {
+                    font-size: 18px;
+                }
+                &-title {
+                    font-size: 80px;
+                }
+                &-paragraph {
+                    text-align: center;
+                    letter-spacing: 2px;
+                    font-size: 16px;
+                }
+            }
+            &-ball {
+                &-explore {
+                    height: 200px;
+                    width: 200px;
+                }
+            }
+        }
+    }
 }
