--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,13 @@ ul {
   list-style: none;
 }
 
+button {
+  border: none;
+  cursor: pointer;
+}
+
 a {
-    color: inherit;
+  color: inherit;
   text-decoration: none;
 }
 
