--- a/src/sections/TegnologySection/style.scss
+++ b/src/sections/TegnologySection/style.scss
@@ -1,25 +1,123 @@
+@use "src/constants/variables" as v;
+
 .technology {
   height: 100vh;
   width: 100vw;
 
+  padding-bottom: 200px;
+  padding-top: 200px;
+  padding-left: 125px;
+
   overflow: hidden;
 
-  &__bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 10;
-  }
-
   &__header {
-    text-align: left;
     width: 100%;
     z-index: 999;
 
+    display: flex;
+    align-items: center;
+
     &-index {
       color: rgba(255, 255, 255, 0.25);
+      margin-top: 3px;
+      margin-right: 26px;
+      font-family: v.$fontBarlow;
+      font-size: 26px;
+      font-weight: 700;
+    }
+
+    &-title {
+      margin: 0;
+      color: v.$white;
+      font-family: v.$fontBarlow;
+      font-size: 28px;
+      font-weight: 400;
+      letter-spacing: 4px;
     }
   }
+
+  &__main {
+    display: flex;
+    gap: 80px;
+
+    &-left {
+      display: flex;
+      gap: 80px;
+      align-items: center;
+      margin-right: 130px;
+    }
+
+    &-btns {
+      display: flex;
+      gap: 32px;
+      flex-direction: column;
+    }
+
+    &-btn {
+      background-color: v.$DarkBlue;
+      border: 1px solid #fff;
+      border-radius: 50%;
+      color: #fff;
+      font-family: v.$fontBellefair;
+      font-size: 32px;
+      font-weight: 400;
+      height: 80px;
+      width: 80px;
+
+      transition: 250ms ease;
+
+      &.active {
+        background-color: v.$white;
+        color: v.$DarkBlue;
+      }
+    }
+
+    &-info {
+      width: 470px;
+    }
+  }
+}
+
+.info__header {
+  &-text {
+    color: v.$white;
+    font-family: v.$fontBarlow;
+    font-style: normal;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    margin-bottom: 11px;
+  }
+
+  &-title {
+    color: v.$white;
+    font-family: v.$fontBellefair;
+    font-size: 56px;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 17px;
+  }
+}
+
+.info__main-info {
+  width: 515px;
+  height: 527px;
+
+  position: relative;
+
+  overflow: hidden;
+
+  & > img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.info__body {
+  color: v.$white;
+  font-family: v.$fontBarlow;
+  font-size: 18px;
+  line-height: 32px;
+  width: 90%;
 }
